library/src/libqabstractitemmodel.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleData QModelRoleData;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QPersistentModelIndex QPersistentModelIndex;
typedef struct QVariant QVariant;
QTLIBC_API QModelRoleData* QModelRoleData_new(int role);
QTLIBC_API QModelRoleData* QModelRoleData_new2(QModelRoleData* param1);
QTLIBC_API int QModelRoleData_Role(const QModelRoleData* self);
QTLIBC_API QVariant* QModelRoleData_Data(QModelRoleData* self);
QTLIBC_API QVariant* QModelRoleData_Data2(const QModelRoleData* self);
QTLIBC_API void QModelRoleData_ClearData(QModelRoleData* self);
QTLIBC_API void QModelRoleData_OperatorAssign(QModelRoleData* self, QModelRoleData* param1);
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new(QModelRoleDataSpan* other);
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new2(QModelRoleDataSpan* other);
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new3();
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new4(QModelRoleData* modelRoleData);
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new5(QModelRoleData* modelRoleData, ptrdiff_t lenVal);
QTLIBC_API QModelRoleDataSpan* QModelRoleDataSpan_new6(QModelRoleDataSpan* param1);
QTLIBC_API ptrdiff_t QModelRoleDataSpan_Size(const QModelRoleDataSpan* self);
QTLIBC_API ptrdiff_t QModelRoleDataSpan_Length(const QModelRoleDataSpan* self);
QTLIBC_API QModelRoleData* QModelRoleDataSpan_Data(const QModelRoleDataSpan* self);
QTLIBC_API QModelRoleData* QModelRoleDataSpan_Begin(const QModelRoleDataSpan* self);
QTLIBC_API QModelRoleData* QModelRoleDataSpan_End(const QModelRoleDataSpan* self);
QTLIBC_API QModelRoleData* QModelRoleDataSpan_OperatorSubscript(const QModelRoleDataSpan* self, ptrdiff_t index);
QTLIBC_API QVariant* QModelRoleDataSpan_DataForRole(const QModelRoleDataSpan* self, int role);
QTLIBC_API QModelIndex* QModelIndex_new(QModelIndex* other);
QTLIBC_API QModelIndex* QModelIndex_new2(QModelIndex* other);
QTLIBC_API QModelIndex* QModelIndex_new3();
QTLIBC_API QModelIndex* QModelIndex_new4(QModelIndex* param1);
QTLIBC_API int QModelIndex_Row(const QModelIndex* self);
QTLIBC_API int QModelIndex_Column(const QModelIndex* self);
QTLIBC_API uintptr_t QModelIndex_InternalId(const QModelIndex* self);
QTLIBC_API void* QModelIndex_InternalPointer(const QModelIndex* self);
QTLIBC_API const void* QModelIndex_ConstInternalPointer(const QModelIndex* self);
QTLIBC_API QModelIndex* QModelIndex_Parent(const QModelIndex* self);
QTLIBC_API QModelIndex* QModelIndex_Sibling(const QModelIndex* self, int row, int column);
QTLIBC_API QModelIndex* QModelIndex_SiblingAtColumn(const QModelIndex* self, int column);
QTLIBC_API QModelIndex* QModelIndex_SiblingAtRow(const QModelIndex* self, int row);
QTLIBC_API QVariant* QModelIndex_Data(const QModelIndex* self);
QTLIBC_API void QModelIndex_MultiData(const QModelIndex* self, QModelRoleDataSpan* roleDataSpan);
QTLIBC_API int QModelIndex_Flags(const QModelIndex* self);
QTLIBC_API QAbstractItemModel* QModelIndex_Model(const QModelIndex* self);
QTLIBC_API bool QModelIndex_IsValid(const QModelIndex* self);
QTLIBC_API bool QModelIndex_OperatorEqual(const QModelIndex* self, QModelIndex* other);
QTLIBC_API bool QModelIndex_OperatorNotEqual(const QModelIndex* self, QModelIndex* other);
QTLIBC_API bool QModelIndex_OperatorLesser(const QModelIndex* self, QModelIndex* other);
QTLIBC_API QVariant* QModelIndex_Data1(const QModelIndex* self, int role);
QTLIBC_API QPersistentModelIndex* QPersistentModelIndex_new();
QTLIBC_API QPersistentModelIndex* QPersistentModelIndex_new2(QModelIndex* index);
QTLIBC_API QPersistentModelIndex* QPersistentModelIndex_new3(QPersistentModelIndex* other);
QTLIBC_API bool QPersistentModelIndex_OperatorLesser(const QPersistentModelIndex* self, QPersistentModelIndex* other);
QTLIBC_API bool QPersistentModelIndex_OperatorEqual(const QPersistentModelIndex* self, QPersistentModelIndex* other);
QTLIBC_API bool QPersistentModelIndex_OperatorNotEqual(const QPersistentModelIndex* self, QPersistentModelIndex* other);
QTLIBC_API void QPersistentModelIndex_OperatorAssign(QPersistentModelIndex* self, QPersistentModelIndex* other);
QTLIBC_API void QPersistentModelIndex_Swap(QPersistentModelIndex* self, QPersistentModelIndex* other);
QTLIBC_API bool QPersistentModelIndex_OperatorEqualWithOther(const QPersistentModelIndex* self, QModelIndex* other);
QTLIBC_API bool QPersistentModelIndex_OperatorNotEqualWithOther(const QPersistentModelIndex* self, QModelIndex* other);
QTLIBC_API void QPersistentModelIndex_OperatorAssignWithOther(QPersistentModelIndex* self, QModelIndex* other);
QTLIBC_API QModelIndex* QPersistentModelIndex_ToQModelIndex(const QPersistentModelIndex* self);
QTLIBC_API int QPersistentModelIndex_Row(const QPersistentModelIndex* self);
QTLIBC_API int QPersistentModelIndex_Column(const QPersistentModelIndex* self);
QTLIBC_API void* QPersistentModelIndex_InternalPointer(const QPersistentModelIndex* self);
QTLIBC_API const void* QPersistentModelIndex_ConstInternalPointer(const QPersistentModelIndex* self);
QTLIBC_API uintptr_t QPersistentModelIndex_InternalId(const QPersistentModelIndex* self);
QTLIBC_API QModelIndex* QPersistentModelIndex_Parent(const QPersistentModelIndex* self);
QTLIBC_API QModelIndex* QPersistentModelIndex_Sibling(const QPersistentModelIndex* self, int row, int column);
QTLIBC_API QVariant* QPersistentModelIndex_Data(const QPersistentModelIndex* self);
QTLIBC_API void QPersistentModelIndex_MultiData(const QPersistentModelIndex* self, QModelRoleDataSpan* roleDataSpan);
QTLIBC_API int QPersistentModelIndex_Flags(const QPersistentModelIndex* self);
QTLIBC_API QAbstractItemModel* QPersistentModelIndex_Model(const QPersistentModelIndex* self);
QTLIBC_API bool QPersistentModelIndex_IsValid(const QPersistentModelIndex* self);
QTLIBC_API QVariant* QPersistentModelIndex_Data1(const QPersistentModelIndex* self, int role);