src/libqabstractitemmodel.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QAbstractItemModel__LayoutChangeHint
{
	NoLayoutChangeHint = 0,
	VerticalSortHint = 1,
	HorizontalSortHint = 2,
}
[AllowDuplicates]
public enum QAbstractItemModel__CheckIndexOption
{
	NoOption = 0,
	IndexIsValid = 1,
	DoNotUseParent = 2,
	ParentIsInvalid = 4,
}
public struct QModelRoleData
{
	[LinkName("QModelRoleData_new")]
	public static extern void* QModelRoleData_new(int32 role);
	[LinkName("QModelRoleData_new2")]
	public static extern void* QModelRoleData_new2(QModelRoleData param1);
	[LinkName("QModelRoleData_Role")]
	public static extern int32 QModelRoleData_Role(void* c_this);
	[LinkName("QModelRoleData_Data")]
	public static extern QVariant QModelRoleData_Data(void* c_this);
	[LinkName("QModelRoleData_Data2")]
	public static extern QVariant QModelRoleData_Data2(void* c_this);
	[LinkName("QModelRoleData_ClearData")]
	public static extern void QModelRoleData_ClearData(void* c_this);
	[LinkName("QModelRoleData_OperatorAssign")]
	public static extern void QModelRoleData_OperatorAssign(void* c_this, QModelRoleData param1);
}
public struct QModelRoleDataSpan
{
	[LinkName("QModelRoleDataSpan_new")]
	public static extern void* QModelRoleDataSpan_new(QModelRoleDataSpan other);
	[LinkName("QModelRoleDataSpan_new2")]
	public static extern void* QModelRoleDataSpan_new2(QModelRoleDataSpan other);
	[LinkName("QModelRoleDataSpan_new3")]
	public static extern void* QModelRoleDataSpan_new3();
	[LinkName("QModelRoleDataSpan_new4")]
	public static extern void* QModelRoleDataSpan_new4(QModelRoleData modelRoleData);
	[LinkName("QModelRoleDataSpan_new5")]
	public static extern void* QModelRoleDataSpan_new5(QModelRoleData modelRoleData, int32 lenVal);
	[LinkName("QModelRoleDataSpan_new6")]
	public static extern void* QModelRoleDataSpan_new6(QModelRoleDataSpan param1);
	[LinkName("QModelRoleDataSpan_Size")]
	public static extern int32 QModelRoleDataSpan_Size(void* c_this);
	[LinkName("QModelRoleDataSpan_Length")]
	public static extern int32 QModelRoleDataSpan_Length(void* c_this);
	[LinkName("QModelRoleDataSpan_Data")]
	public static extern QModelRoleData QModelRoleDataSpan_Data(void* c_this);
	[LinkName("QModelRoleDataSpan_Begin")]
	public static extern QModelRoleData QModelRoleDataSpan_Begin(void* c_this);
	[LinkName("QModelRoleDataSpan_End")]
	public static extern QModelRoleData QModelRoleDataSpan_End(void* c_this);
	[LinkName("QModelRoleDataSpan_OperatorSubscript")]
	public static extern QModelRoleData QModelRoleDataSpan_OperatorSubscript(void* c_this, int32 index);
	[LinkName("QModelRoleDataSpan_DataForRole")]
	public static extern QVariant QModelRoleDataSpan_DataForRole(void* c_this, int32 role);
}
public struct QModelIndex
{
	[LinkName("QModelIndex_new")]
	public static extern void* QModelIndex_new(QModelIndex other);
	[LinkName("QModelIndex_new2")]
	public static extern void* QModelIndex_new2(QModelIndex other);
	[LinkName("QModelIndex_new3")]
	public static extern void* QModelIndex_new3();
	[LinkName("QModelIndex_new4")]
	public static extern void* QModelIndex_new4(QModelIndex param1);
	[LinkName("QModelIndex_Row")]
	public static extern int32 QModelIndex_Row(void* c_this);
	[LinkName("QModelIndex_Column")]
	public static extern int32 QModelIndex_Column(void* c_this);
	[LinkName("QModelIndex_InternalId")]
	public static extern c_uintptr QModelIndex_InternalId(void* c_this);
	[LinkName("QModelIndex_InternalPointer")]
	public static extern void QModelIndex_InternalPointer(void* c_this);
	[LinkName("QModelIndex_ConstInternalPointer")]
	public static extern void QModelIndex_ConstInternalPointer(void* c_this);
	[LinkName("QModelIndex_Parent")]
	public static extern QModelIndex QModelIndex_Parent(void* c_this);
	[LinkName("QModelIndex_Sibling")]
	public static extern QModelIndex QModelIndex_Sibling(void* c_this, int32 row, int32 column);
	[LinkName("QModelIndex_SiblingAtColumn")]
	public static extern QModelIndex QModelIndex_SiblingAtColumn(void* c_this, int32 column);
	[LinkName("QModelIndex_SiblingAtRow")]
	public static extern QModelIndex QModelIndex_SiblingAtRow(void* c_this, int32 row);
	[LinkName("QModelIndex_Data")]
	public static extern QVariant QModelIndex_Data(void* c_this);
	[LinkName("QModelIndex_MultiData")]
	public static extern void QModelIndex_MultiData(void* c_this, QModelRoleDataSpan roleDataSpan);
	[LinkName("QModelIndex_Flags")]
	public static extern int64 QModelIndex_Flags(void* c_this);
	[LinkName("QModelIndex_Model")]
	public static extern QAbstractItemModel QModelIndex_Model(void* c_this);
	[LinkName("QModelIndex_IsValid")]
	public static extern bool QModelIndex_IsValid(void* c_this);
	[LinkName("QModelIndex_OperatorEqual")]
	public static extern bool QModelIndex_OperatorEqual(void* c_this, QModelIndex other);
	[LinkName("QModelIndex_OperatorNotEqual")]
	public static extern bool QModelIndex_OperatorNotEqual(void* c_this, QModelIndex other);
	[LinkName("QModelIndex_OperatorLesser")]
	public static extern bool QModelIndex_OperatorLesser(void* c_this, QModelIndex other);
	[LinkName("QModelIndex_Data1")]
	public static extern QVariant QModelIndex_Data1(void* c_this, int32 role);
}
public struct QPersistentModelIndex
{
	[LinkName("QPersistentModelIndex_new")]
	public static extern void* QPersistentModelIndex_new();
	[LinkName("QPersistentModelIndex_new2")]
	public static extern void* QPersistentModelIndex_new2(QModelIndex index);
	[LinkName("QPersistentModelIndex_new3")]
	public static extern void* QPersistentModelIndex_new3(QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorLesser")]
	public static extern bool QPersistentModelIndex_OperatorLesser(void* c_this, QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorEqual")]
	public static extern bool QPersistentModelIndex_OperatorEqual(void* c_this, QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorNotEqual")]
	public static extern bool QPersistentModelIndex_OperatorNotEqual(void* c_this, QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorAssign")]
	public static extern void QPersistentModelIndex_OperatorAssign(void* c_this, QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_Swap")]
	public static extern void QPersistentModelIndex_Swap(void* c_this, QPersistentModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorEqualWithOther")]
	public static extern bool QPersistentModelIndex_OperatorEqualWithOther(void* c_this, QModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorNotEqualWithOther")]
	public static extern bool QPersistentModelIndex_OperatorNotEqualWithOther(void* c_this, QModelIndex other);
	[LinkName("QPersistentModelIndex_OperatorAssignWithOther")]
	public static extern void QPersistentModelIndex_OperatorAssignWithOther(void* c_this, QModelIndex other);
	[LinkName("QPersistentModelIndex_ToQModelIndex")]
	public static extern QModelIndex QPersistentModelIndex_ToQModelIndex(void* c_this);
	[LinkName("QPersistentModelIndex_Row")]
	public static extern int32 QPersistentModelIndex_Row(void* c_this);
	[LinkName("QPersistentModelIndex_Column")]
	public static extern int32 QPersistentModelIndex_Column(void* c_this);
	[LinkName("QPersistentModelIndex_InternalPointer")]
	public static extern void QPersistentModelIndex_InternalPointer(void* c_this);
	[LinkName("QPersistentModelIndex_ConstInternalPointer")]
	public static extern void QPersistentModelIndex_ConstInternalPointer(void* c_this);
	[LinkName("QPersistentModelIndex_InternalId")]
	public static extern c_uintptr QPersistentModelIndex_InternalId(void* c_this);
	[LinkName("QPersistentModelIndex_Parent")]
	public static extern QModelIndex QPersistentModelIndex_Parent(void* c_this);
	[LinkName("QPersistentModelIndex_Sibling")]
	public static extern QModelIndex QPersistentModelIndex_Sibling(void* c_this, int32 row, int32 column);
	[LinkName("QPersistentModelIndex_Data")]
	public static extern QVariant QPersistentModelIndex_Data(void* c_this);
	[LinkName("QPersistentModelIndex_MultiData")]
	public static extern void QPersistentModelIndex_MultiData(void* c_this, QModelRoleDataSpan roleDataSpan);
	[LinkName("QPersistentModelIndex_Flags")]
	public static extern int64 QPersistentModelIndex_Flags(void* c_this);
	[LinkName("QPersistentModelIndex_Model")]
	public static extern QAbstractItemModel QPersistentModelIndex_Model(void* c_this);
	[LinkName("QPersistentModelIndex_IsValid")]
	public static extern bool QPersistentModelIndex_IsValid(void* c_this);
	[LinkName("QPersistentModelIndex_Data1")]
	public static extern QVariant QPersistentModelIndex_Data1(void* c_this, int32 role);
}
